# nlp-study

./: .gitignore  README.md  pyproject.toml
common/: checkpoint.py  inference.py  trainer.py  vocab.py
week1/: calc.py  infer.py  inference.py  main.py  train.ipynb  train.py  trainer.py  vocab_basic_english.pth
week1/word2vec/: __init__.py  dataset.py  model.py  preprocessor.py  words.py
week2/: .gitignore  graph.py  inference.py  loss.csv  main.py  trainer.py  vocab_basic_english.pth
week2/core/: dataset.py  model.py
week3/: inference.py  main.py  trainer.py
week3/core/: dataset.py  model.py
